# itwin-unreal-plugin

./: .gitattributes  .gitignore  .gitmodules  .lfsconfig  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  ThirdParty.json  bbconfig.json  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS  copilot-instructions.md
.github/agents/: dev.agent.md
Documentation/: README.md
Documentation/For3DFTUsers/: README.md
Documentation/ForDevelopers/: README.md
Documentation/InstallationAndUse/: README.md
Documentation/Using4DAnimation/: README.md
Public/: GetVcpkgInfos.py  MergeCodeCoverageReports.py  RunTests.py  SetupUnrealExternFiles.py
Public/BeHeaders/: CMakeLists.txt
Public/BeHeaders/Boost/: BoostFusionUtils.h  BoostFusionUtils.inl
Public/BeHeaders/BuildConfig/: README.txt
Public/BeHeaders/Compil/: AlwaysFalse.h  Attributes.h  AutoOperators.h  Break.h  CleanUpGuard.h  EmptyBases.h  EnumSwitchCoverage.h
Public/BeHeaders/StrongTypes/: Skills.h  TaggedValue.h  TaggedValueFW.h  TaggedValue_hash.h  TaggedValue_io.h  TaggedValue_operations.h  TaggedValue_traits.h  TaggedVector.h  TypeOperations.h
Public/BeHeaders/Util/: CleanUpGuard.h  Enumerations.h  OptionsClass.h
Public/BeUtils/: CMakeLists.txt
Public/BeUtils/Gltf/: ExtensionITwinMaterial.h  ExtensionITwinMaterialID.h  GltfBuilder.cpp  GltfBuilder.h  GltfBuilder.inl  GltfMaterialHelper.cpp  GltfMaterialHelper.h  GltfMaterialTuner.cpp  GltfMaterialTuner.h  GltfTextureHelper.cpp  GltfTextureHelper.h  GltfTuner.cpp  GltfTuner.h
Public/BeUtils/Misc/: MiscUtils.cpp  MiscUtils.h  RWLock.h  Random.h
Public/BeUtils/SplineSampling/: Basic2DMap.cpp  Basic2DMap.h  Basic2DMap.inl  ControlledCurve.cpp  ControlledCurve.h  MathTypes.h  OcclusionMap.cpp  OcclusionMap.h  Poisson2D.h  SplineDefines.h  SplineHelper.cpp  SplineHelper.h  SplinePattern.cpp  SplinePattern.h  SplineSampling.cpp  SplineSampling.h  SplineUtils.h
Public/BeUtils/UnitTests/: CMakeLists.txt  Main.cpp  TestGltfTuner.cpp  TestMiscUtils.cpp
Public/CMake/: FixStdoutForVS.py  LaunchWithTimeout.py  advanced_option.cmake  be_add_feature_option.cmake  be_add_test.cmake  be_add_unreal_project.cmake  be_coverage.cmake  be_feature_option.h.template  be_file_utils.cmake  be_find_git.cmake  be_get_targets.cmake  be_get_vcpkg_infos.cmake  be_setup_native_lib_flags.cmake  be_ue_prepare_for_mend.cmake  be_utils.cmake  be_vcpkg_buildtrees_for_mend.cmake  detect_unreal_root.cmake  jsonUtils.cmake  main.cmake  options.cmake  projectName.cmake  rsync_be_unreal.cmake  run_uat_with_config.py
Public/CesiumDependencies/: CMakeLists.txt  generate_overlay_files.cmake
Public/ITwinTestAppConfig/: ITwinTestAppConfig.h.in
Public/SDK/: CMakeLists.txt  CMakePresets.json  External.cmake  HandleVCPKG.cmake  README.md  vcpkg-configuration.json  vcpkg.json
Public/SDK/Core/: AdvVizLinkType.h  CMakeLists.txt  Core.h
Public/SDK/Core/ITwinAPI/: CMakeLists.txt  ITwinAuthInfo.h  ITwinAuthManager.cpp  ITwinAuthManager.h  ITwinAuthObserver.h  ITwinAuthStatus.h  ITwinEnvironment.h  ITwinMatMLPredictionEnums.h  ITwinMaterial.cpp  ITwinMaterial.h  ITwinMaterial.inl  ITwinMaterialPrediction.h  ITwinRequestDump.h  ITwinRequestTypes.h  ITwinScene.h  ITwinTypes.h  ITwinWebServices.cpp  ITwinWebServices.h  ITwinWebServicesObserver.cpp  ITwinWebServicesObserver.h
Public/SDK/Core/Json/: CMakeLists.txt  Json.h  Json.ixx  JsonTest.cpp
Public/SDK/Core/Network/: CMakeLists.txt  HttpError.h  HttpGetWithLink.h  HttpRequest.cpp  HttpRequest.h  IHttpRouter.cpp  IHttpRouter.h  Network-http.ixx  Network.h  Network.ixx  NetworkHttpTest.cpp  Network_api.h  http.cpp  http.h  http.ixx  httpCprImpl.cpp  httpCprImpl.h  httpCprImpl.ixx  httpImpl.cpp
Public/SDK/Core/Singleton/: CMakeLists.txt  singleton.cpp  singleton.h  singleton_api.h
Public/SDK/Core/Tools/: Assert.h  AssertHandler.cpp  AssertHandler.h  CMakeLists.txt  CommonInterfaceClass.h  CrashInfo.cpp  CrashInfo.h  DelayedCall.h  DelayedCallEnums.h  Error.h  Extension.cpp  Extension.h  Extension.ixx  FactoryClass.cpp  FactoryClass.h  FactoryClass.ixx  FactoryClassInternalHelper.h  GCSTransform.cpp  GCSTransform.h  Hash.h  IDelayedCallHandler.cpp  IDelayedCallHandler.h  Internal_mathConv.inl  JsonCacheUtilities.cpp  JsonCacheUtilities.h  LockableObject.h  Log.cpp  Log.h  SharedMutexCheck.cpp  SharedMutexCheck.h  SharedRecursiveMutex.cpp  SharedRecursiveMutex.h  StringWithEncoding.h  StrongTypeId.h  TaskFinishMonitor.h  TaskManager.cpp  TaskManager.h  Tools.h  Tools.ixx  ToolsTest.cpp  (+3 more)
Public/SDK/Core/Visualization/: AnnotationsManager.cpp  AnnotationsManager.h  AsyncHelpers.cpp  AsyncHelpers.h  AsyncHttp.inl  CMakeLists.txt  Config.cpp  Config.h  Config.ixx  Decoration.cpp  Decoration.h  Instance.cpp  Instance.h  InstancesGroup.cpp  InstancesGroup.h  InstancesManager.cpp  InstancesManager.h  KeyframeAnimation.cpp  KeyframeAnimation.h  KeyframeAnimator.cpp  KeyframeAnimator.h  MaterialPersistence.cpp  MaterialPersistence.h  PathAnimation.cpp  PathAnimation.h  RefID.cpp  RefID.h  SavableItem.h  SavableItemManager.cpp  SavableItemManager.h  SavableItemManager.inl  SaveStatus.h  Scene.cpp  Scene.h  Scene.ixx  ScenePersistence.cpp  ScenePersistence.h  ScenePersistenceAPI.cpp  ScenePersistenceAPI.h  ScenePersistenceDS.cpp  (+12 more)
Public/SDK/Core/Visualization/Tests/: AnnotationTest.cpp  InstancesTest.cpp  Mock.h  RefIDTest.cpp  SceneAPITest.cpp  SplinesTest.cpp  VisualizationTest.cpp  VizKeyframeTests.cpp
Public/SDK/cmake/: CustomConfig.cmake  External.cmake  HandleVCPKG.cmake
Public/UnrealProjects/ITwinTestApp/: ITwinTestApp.uproject
Public/VSNatVis/: cesium_gltf.natvis
Public/httpmockserver/: CMakeLists.txt  mock_holder.h  mock_server.cpp  mock_server.h  port_searcher.h  test_environment.h
Public/httpmockserver/cmake/: FindMHD.cmake
vcpkg-overlays/ffmpeg-bin2c/: CMakeLists.txt  portfile.cmake
vcpkg-overlays/x264/: fix-CVE-2025-25467.patch  portfile.cmake
vcpkg-overlays/zlib/: 0001-zlib-static-output-name.patch  portfile.cmake  vcpkg.json
vcpkg-triplets/: x64-windows-unreal-debug.cmake  x64-windows-unreal-release.cmake
(+501 files in other folders)
